--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/colorActivityBackground"
-              android:orientation="vertical"
-              tools:context="me.bakumon.ugank.module.setting.SettingActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorActivityBackground"
+    android:orientation="vertical"
+    tools:context="me.bakumon.ugank.module.setting.SettingActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar_setting"
@@ -22,7 +22,7 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:title="@string/setting_title"
-            app:titleTextColor="@android:color/white"/>
+            app:titleTextColor="@android:color/white" />
     </android.support.design.widget.AppBarLayout>
 
     <ScrollView
@@ -34,6 +34,37 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingBottom="8dp">
+
+            <LinearLayout
+                android:id="@+id/ll_user_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:paddingBottom="8dp"
+                android:paddingTop="15dp">
+
+                <me.bakumon.ugank.widget.CircleImageView
+                    android:id="@+id/iv_setting_user_photo"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    android:paddingBottom="3dp"
+                    android:src="@drawable/ic_default_user" />
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/tv_setting_user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/setting_login"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="8dp"
+                android:background="#F5F5F5" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -49,13 +80,13 @@
                     android:layout_weight="1"
                     android:text="@string/setting_basic"
                     android:textColor="@color/colorTextEnableGary"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/line_height"
-                android:background="@color/colorLine"/>
+                android:background="@color/colorLine" />
 
             <LinearLayout
                 android:id="@+id/ll_is_show_list_img"
@@ -71,18 +102,18 @@
                     android:layout_weight="1"
                     android:text="@string/setting_thumb_show"
                     android:textColor="@color/colorTextEnable"
-                    android:textSize="15sp"/>
+                    android:textSize="15sp" />
 
                 <android.support.v7.widget.SwitchCompat
                     android:id="@+id/switch_setting"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/line_height"
-                android:background="@color/colorLine"/>
+                android:background="@color/colorLine" />
 
             <LinearLayout
                 android:id="@+id/ll_setting_image_quality"
@@ -99,7 +130,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/setting_thumb_quality"
                     android:textColor="@color/colorTextEnable"
-                    android:textSize="15sp"/>
+                    android:textSize="15sp" />
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/tv_setting_image_quality_tip"
@@ -108,7 +139,7 @@
                     android:layout_marginTop="3dp"
                     android:text="@string/setting_thumb_quality_tip"
                     android:textColor="@color/colorTextEnableGary"
-                    android:textSize="12sp"/>
+                    android:textSize="12sp" />
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/tv_setting_image_quality_content"
@@ -117,14 +148,14 @@
                     android:layout_marginTop="3dp"
                     android:text="@string/setting_quality_hige"
                     android:textColor="@color/colorTextEnableGary"
-                    android:textSize="12sp"/>
+                    android:textSize="12sp" />
 
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
-                android:background="#F5F5F5"/>
+                android:background="#F5F5F5" />
 
             <LinearLayout
                 android:id="@+id/ll_is_show_launcher_img"
@@ -147,7 +178,7 @@
                         android:layout_height="wrap_content"
                         android:text="启动页妹子图"
                         android:textColor="@color/colorTextEnable"
-                        android:textSize="15sp"/>
+                        android:textSize="15sp" />
 
                     <android.support.v7.widget.AppCompatTextView
                         android:id="@+id/tv_is_show_launcher_img_content"
@@ -155,19 +186,19 @@
                         android:layout_height="wrap_content"
                         android:text="基佬怎么会需要妹子"
                         android:textColor="@color/colorTextEnableGary"
-                        android:textSize="12sp"/>
+                        android:textSize="12sp" />
                 </LinearLayout>
 
                 <android.support.v7.widget.SwitchCompat
                     android:id="@+id/switch_setting_show_launcher_img"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/line_height"
-                android:background="@color/colorLine"/>
+                android:background="@color/colorLine" />
 
             <LinearLayout
                 android:id="@+id/ll_is_always_show_launcher_img"
@@ -190,7 +221,7 @@
                         android:layout_height="wrap_content"
                         android:text="概率出现"
                         android:textColor="@color/colorTextEnable"
-                        android:textSize="15sp"/>
+                        android:textSize="15sp" />
 
                     <android.support.v7.widget.AppCompatTextView
                         android:id="@+id/tv_is_always_show_launcher_img_content"
@@ -198,20 +229,20 @@
                         android:layout_height="wrap_content"
                         android:text="我每次都要幸临，没毛病"
                         android:textColor="@color/colorTextEnableGary"
-                        android:textSize="12sp"/>
+                        android:textSize="12sp" />
                 </LinearLayout>
 
                 <android.support.v7.widget.SwitchCompat
                     android:id="@+id/switch_setting_always_show_launcher_img"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="8dp"
-                android:background="#F5F5F5"/>
+                android:background="#F5F5F5" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -227,13 +258,13 @@
                     android:layout_weight="1"
                     android:text="@string/setting_more"
                     android:textColor="@color/colorTextEnableGary"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/line_height"
-                android:background="@color/colorLine"/>
+                android:background="@color/colorLine" />
 
             <LinearLayout
                 android:id="@+id/ll_setting_about"
@@ -255,7 +286,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/setting_about_ugank"
                         android:textColor="@color/colorTextEnable"
-                        android:textSize="15sp"/>
+                        android:textSize="15sp" />
 
                     <android.support.v7.widget.AppCompatTextView
                         android:id="@+id/tv_setting_version_name"
@@ -264,7 +295,7 @@
                         android:layout_marginTop="2dp"
                         android:text="@string/setting_version"
                         android:textColor="@color/colorTextEnableGary"
-                        android:textSize="12sp"/>
+                        android:textSize="12sp" />
                 </LinearLayout>
 
                 <android.support.v7.widget.AppCompatImageView
@@ -272,13 +303,13 @@
                     android:layout_height="12dp"
                     android:layout_gravity="center_vertical"
                     android:contentDescription="@null"
-                    app:srcCompat="@drawable/ic_right"/>
+                    app:srcCompat="@drawable/ic_right" />
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/line_height"
-                android:background="@color/colorLine"/>
+                android:background="@color/colorLine" />
 
             <LinearLayout
                 android:id="@+id/ll_setting_clean_cache"
@@ -300,7 +331,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/setting_clean_cache"
                         android:textColor="@color/colorTextEnable"
-                        android:textSize="15sp"/>
+                        android:textSize="15sp" />
 
                     <android.support.v7.widget.AppCompatTextView
                         android:id="@+id/tv_setting_clean_cache"
@@ -308,7 +339,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
                         android:textColor="@color/colorTextEnableGary"
-                        android:textSize="12sp"/>
+                        android:textSize="12sp" />
                 </LinearLayout>
 
                 <android.support.v7.widget.AppCompatImageView
@@ -316,13 +347,13 @@
                     android:layout_height="12dp"
                     android:layout_gravity="center_vertical"
                     android:contentDescription="@null"
-                    app:srcCompat="@drawable/ic_right"/>
+                    app:srcCompat="@drawable/ic_right" />
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/line_height"
-                android:background="@color/colorLine"/>
+                android:background="@color/colorLine" />
 
             <LinearLayout
                 android:id="@+id/ll_setting_pay"
@@ -344,7 +375,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/setting_donate"
                         android:textColor="@color/colorTextEnable"
-                        android:textSize="15sp"/>
+                        android:textSize="15sp" />
                 </LinearLayout>
 
                 <android.support.v7.widget.AppCompatImageView
@@ -352,13 +383,13 @@
                     android:layout_height="12dp"
                     android:layout_gravity="center_vertical"
                     android:contentDescription="@null"
-                    app:srcCompat="@drawable/ic_right"/>
+                    app:srcCompat="@drawable/ic_right" />
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/line_height"
-                android:background="@color/colorLine"/>
+                android:background="@color/colorLine" />
 
             <LinearLayout
                 android:id="@+id/ll_setting_issues"
@@ -380,7 +411,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/setting_feedback"
                         android:textColor="@color/colorTextEnable"
-                        android:textSize="15sp"/>
+                        android:textSize="15sp" />
 
                     <android.support.v7.widget.AppCompatTextView
                         android:layout_width="match_parent"
@@ -388,7 +419,7 @@
                         android:layout_marginTop="2dp"
                         android:text="https://github.com/Bakumon/UGank/issues"
                         android:textColor="@color/colorTextEnableGary"
-                        android:textSize="12sp"/>
+                        android:textSize="12sp" />
                 </LinearLayout>
 
                 <android.support.v7.widget.AppCompatImageView
@@ -396,13 +427,23 @@
                     android:layout_height="12dp"
                     android:layout_gravity="center_vertical"
                     android:contentDescription="@null"
-                    app:srcCompat="@drawable/ic_right"/>
+                    app:srcCompat="@drawable/ic_right" />
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/line_height"
-                android:background="@color/colorLine"/>
+                android:background="@color/colorLine" />
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tv_logout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:padding="20dp"
+                android:text="退出登录"
+                android:textColor="@color/colorSwipeRefresh4"
+                android:textSize="16sp" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
